<resources>
    <string name="app_name">MAS_FINAL</string>
    <string name="valdar">VladAr</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="ok">Ok</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="extra_phone">Extra phone</string>
    <string name="location">Location</string>
    <string name="enter_email">You need to enter email!</string>
    <string name="bad_email">Bad email</string>
    <string name="email_exists">This email exists already.</string>
    <string name="server_is_unavailable">Server is unavailable</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="all_fields_is_required">All fields must be full</string>
    <string name="passwords_must_be_equal">Passwords must be equal</string>
    <string name="birthday">Birthday</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don`t have an account?</string>
    <string name="create">Create</string>
    <string name="exit">Exit</string>
    <string name="book">Book</string>
    <string name="bad_login">Bad email or password</string>
    <string name="rooms">Rooms</string>
    <string name="log_in">Log in</string>
    <string name="your_reservations">Your reservations</string>
    <string name="price_format">%d $</string>
    <string name="reservation_range_format">From %s\nTo %s</string>
    <string name="please_select_objects">Please select some objects</string>
    <string name="select_dates">Select dates</string>
    <string name="verification">Verification</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_format">%s %s\n%s\n%s\nFrom %s to %s</string>
    <string name="no_available">Sorry there are no available objects on this dates</string>
    <string name="success">Success</string>
    <string name="you_have_no_reservations">You have`t any reservations yet</string>
</resources>