<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewLayers.views.login.LoginActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:text="@string/valdar"
            android:textSize="48sp"
            android:textColor="@color/main_green"
            android:fontFamily="@font/roboto_bold" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp" />

        <com.example.mas_final.viewLayers.components.VAField
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintText="@string/email"
            app:icon="@drawable/ic_person" />

        <com.example.mas_final.viewLayers.components.VAField
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintText="@string/password"
            app:icon="@drawable/ic_person"
            app:password="true" />

        <TextView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/green_btn"
            android:paddingVertical="8dp"
            android:paddingHorizontal="52dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/dont_have_an_account" />

        <TextView
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/main_green"
            android:text="@string/create"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>